--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-    <h3 class="center-align">Register</h3>
+    <h3 class="center-align">Log In</h3>
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel">
                 <!-- Username -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="fas fa-user-plus prefix green-text text-darken-3"></i>
+                        <i class="fas fa-user-cog prefix green-text text-darken-3"></i>
                         <input id="username" name="username" type="text" minlength="5" 
                         maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="username">Username</label>
@@ -22,10 +22,10 @@
                         <label for="password">Password</label>
                     </div>
                 </div>
-                <!-- Register -->
+                <!-- Login -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large green darken-3 text-shadow">
-                        Register <i class="fas fa-sign-in-alt"></i>
+                        Log In <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
             </div>
@@ -34,8 +34,8 @@
     <div class="row">
         <div class="col s12">
             <p class="center-align">
-                Already Registered? 
-                <a href="{{ url_for('login') }}" class="green-text text-darken-4">Log In</a>
+                New here? 
+                <a href="{{ url_for('register') }}" class="green-text text-darken-4">Register Account</a>
             </p>
         </div>
     </div>
