--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -7,12 +7,18 @@
         {% for task in tasks %}
             <li>
                 <div class="collapsible-header white-text green darken-3 text-shadow">
-                    <i class="fas fa-caret-down"></i>
-                    <strong>{{ task.task_name }}</strong> : {{ task.due_date }}
-                    {%if task.is_urgent == "on" %}
-                        <i class="fas fa-exclamation-circle green-text text-lighten-3 tooltipped"
-                            data-position="right" data-tooltip="URGENT!" ></i>
-                    {% endif %}
+                    <div class="col s3">
+                        <i class="fas fa-caret-down"></i>
+                        <a href="" class="btn-small green accent-4">Done</a>
+                        <a href="" class="btn-small light-blue lighten-2">Edit</a>
+                    </div>
+                    <div class="col s9">
+                        <strong>{{ task.task_name }}</strong> : {{ task.due_date }}
+                        {%if task.is_urgent == "on" %}
+                            <i class="fas fa-exclamation-circle green-text text-lighten-3 tooltipped"
+                                data-position="right" data-tooltip="URGENT!" ></i>
+                        {% endif %}
+                    </div>
                 </div>
                 <div class="collapsible-body">
                     <strong>{{ task.category_name }}</strong>
