--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -10,9 +10,23 @@
                     <div class="col s3">
                         <i class="fas fa-caret-down"></i>
                         {% if session.user|lower == task.created_by|lower %}
-                            <a href="{{ url_for('delete_task', task_id=task._id) }}" class="btn-small green accent-4">Done</a>
+                            <!-- Modal Trigger -->    
+                            <a href="#mo@{{ task._id}}" class="btn-small green accent-4 modal-trigger">Done</a>
+                            <!-- Modal Structure -->
+                            <div id="mo@{{ task._id}}" class="modal">
+                                <div class="modal-content green-text center-align text-darken-4 modal-del-task">
+                                    <div><h4>Delete Task</h4></div>
+                                    <hr>
+                                    <h5>{{ task.task_name }}</h5>
+                                    <p>Are you sure you want to delete this task?</p>
+                                </div>
+                                <div class="center-align">
+                                    <a href="{{ get_tasks }}" class="btn-small red accent-4">Cancel</a>
+                                    <a href="{{ url_for('delete_task', task_id=task._id) }}" class="btn-small green accent-4">Delete</a>
+                                </div>
+                            </div>
                             <a href="{{ url_for('edit_task', task_id=task._id) }}" class="btn-small light-blue lighten-2">Edit</a>
-                            {% endif %}
+                        {% endif %}
                     </div>
                     <div class="col s9">
                         <strong>{{ task.task_name }}</strong> : {{ task.due_date }}
