--- a/templates/categories.html
+++ b/templates/categories.html
@@ -3,7 +3,13 @@
 {% block content %}
 
     <h3 class="green-text text-darken-4 center-align">Manage Categories</h3>
-
+    <div class="row">
+        <div class="col s12 center-align">
+            <a href="{{ url_for('add_category') }}" class="btn-large green darken-1 text-shadow ">
+                Add category <i class="fas fa-plus-square right"></i>
+            </a>
+        </div>
+    </div>
     <div class="row">
         {% for category in categories %}
             <div class="col s12 m6 l3">
@@ -12,8 +18,8 @@
                         <span class="card-title">{{ category.category_name }}</span>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="btn green lighten-1">Edit</a>
-                        <a href="#" class="btn red lighten-1">Delete</a>
+                        <a href="#" class="btn-small green lighten-1">Edit</a>
+                        <a href="#" class="btn-small red lighten-1">Delete</a>
                     </div>
                 </div>
             </div>
