--- a/templates/categories.html
+++ b/templates/categories.html
@@ -18,7 +18,7 @@
                         <span class="card-title">{{ category.category_name }}</span>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="btn-small green lighten-1">Edit</a>
+                        <a href="{{url_for('edit_category', category_id=category._id)}}" class="btn-small green lighten-1">Edit</a>
                         <a href="#" class="btn-small red lighten-1">Delete</a>
                     </div>
                 </div>
