--- a/templates/categories.html
+++ b/templates/categories.html
@@ -19,7 +19,21 @@
                     </div>
                     <div class="card-action">
                         <a href="{{url_for('edit_category', category_id=category._id)}}" class="btn-small green lighten-1">Edit</a>
-                        <a href="#" class="btn-small red lighten-1">Delete</a>
+                        <!-- Modal Trigger -->    
+                        <a href="#m1@{{ category._id }}" class="btn-small red lighten-1 modal-trigger">Delete</a>
+                        <!-- Modal Structure -->
+                        <div id="m1@{{ category._id }}" class="modal">
+                            <div class="modal-content green-text center-align text-darken-4 modal-del-task">
+                                <div><h4>Delete Category</h4></div>
+                                <hr>
+                                <h5>{{ category.category_name }}</h5>
+                                <p>Are you sure you want to delete this Category?</p>
+                            </div>
+                            <div class="center-align">
+                                <a href="{{ get_categories }}" class="btn-small red accent-4">Cancel</a>
+                                <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-small green accent-4">Delete</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
